--- a/IntroPoo/registroAutomotor/package.json
+++ b/IntroPoo/registroAutomotor/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "typescript",
+  "name": "registroAutomotor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "ejecutar": "tsc ejerc2.ts & node ejerc2.js",
+    "auto": "tsc registro.ts && node registro.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.22"
   }
 }
