--- a/IntroPoo/auto/package.json
+++ b/IntroPoo/auto/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "typescript",
+  "name": "auto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "ejecutar": "tsc ejerc2.ts & node ejerc2.js",
+    "auto": "tsc auto.ts & node auto.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.0.20",
     "readline-sync": "^1.4.10"
   }
 }
