--- a/IntroPoo/clase1307/package.json
+++ b/IntroPoo/clase1307/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "typescript",
+  "name": "clase1307",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "ejecutar": "tsc ejerc2.ts & node ejerc2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.0.23",
     "readline-sync": "^1.4.10"
   }
 }
