--- a/archivosTxt/package.json
+++ b/archivosTxt/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "typescript",
+  "name": "archivosTxt",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "ejecutar": "tsc ejerc2.ts & node ejerc2.js",
+    "ejecutar": "tsc index.ts & node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "@types/node": "^14.0.18"
   }
 }
