--- a/IntroPoo/clase1307/package.json
+++ b/IntroPoo/clase1307/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "decodificador": "tsc decodificador.ts && node decodificador.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
