--- a/IntroPoo/matrizCompuesta/package.json
+++ b/IntroPoo/matrizCompuesta/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "registroAutomotor",
+  "name": "matrizCompuesta",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "auto": "tsc registro.ts && node registro.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/readline-sync": "^1.4.3",
+    "@types/node": "^14.0.24",
     "readline-sync": "^1.4.10"
-  },
-  "devDependencies": {
-    "@types/node": "^14.0.22"
   }
 }
