--- a/IntroPoo/matrizCompuesta/tsconfig.json
+++ b/IntroPoo/matrizCompuesta/tsconfig.json
@@ -9,7 +9,7 @@
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-  "files": [
-    "./matrices.ts",
+  "files":[
+    "./matrizCompuesta.ts",
   ]
 }
